[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dj-svg"
dynamic = ["version"]
description = "SVG template tag for Django"
readme = "README.md"
license = "MIT License"
requires-python = ">=3.8"
authors = [{ name = "Max Shapira", email = "max@winoutt.com" }]
maintainers = [{ name = "Max Shapira", email = "max@winoutt.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Plugins",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 2.0",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.4",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = ["Django>=4.0", "docutils"]

[tool.hatch.envs.default]
installer = "uv"
dependencies = [
  "pytest",
  "pytest-cov",
  "pytest-django",
  "black",
  "flake8",
  "tox",
]

[project.urls]
Homepage = "https://github.com/xshapira/dj-svg"
Documentation = "https://github.com/xshapira/dj-svg"

[tool.hatch.version]
path = "dj_svg/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/dj_svg"]
